feat: add system font to merri.css

--- a/presets/merri.css
+++ b/presets/merri.css
@@ -1,10 +1,9 @@
-body { max-width: 760px; padding: 0 1rem; margin: 0 auto; font: 16px Merriweather, sans-serif; color: #333 }
+body { font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" }
+body { max-width: 760px; padding: 0 1rem; margin: 0 auto; font-size: 16px; font-weight: 300; color: #333 }
 
-h1, h2, h3, h4, h5 { margin: 1.5em 0 }
+h1, h2, h3, h4, h5 { margin: 1.6em 0; font-family: Merriweather }
 h1 { font-size: 3rem; text-align: center; margin-bottom: 0.4em }
 h1 + p { text-align: center; color: #AAA }
-
-p { font-weight: 300 }
 
 a { text-decoration: none; color: #06D }
 a:hover { text-decoration: underline }
