--- a/presets/merri.css
+++ b/presets/merri.css
@@ -1,9 +1,10 @@
-body { font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" }
-body { max-width: 760px; padding: 0 1rem; margin: 0 auto; font-size: 16px; font-weight: 300; color: #333 }
+body { max-width: 760px; padding: 0 1rem; margin: 0 auto; font: 16px Merriweather; font-weight: 300; color: #333 }
 
 h1, h2, h3, h4, h5 { margin: 1.6em 0; font-family: Merriweather }
 h1 { font-size: 3rem; text-align: center; margin-bottom: 0.4em }
 h1 + p { text-align: center; color: #AAA }
+
+p, li { font-weight: 300 }
 
 a { text-decoration: none; color: #06D }
 a:hover { text-decoration: underline }
@@ -12,7 +13,8 @@ table { border-spacing: 0 }
 thead { display: none }
 td { padding: 0 1em 0 0; height: 24px; font: 14px/20px sans-serif }
 
-pre { padding: 16px; overflow: auto; font-size: 85%; line-height: 1.45; background-color: #f6f8fa; border-radius: 3px; }
+pre { padding: 16px; overflow: auto; line-height: 1.45; background-color: #f6f8fa; border-radius: 3px; }
+code { font-size: 0.85em; padding: 0.2em; background-color: #f6f8fa; }
 
 /* latin */
 @font-face {
